@@ -1,6 +1,6 @@
 .TH QucsTranscalc "1" "April 2005" "Debian/GNU Linux" "User Commands"
 .SH NAME
-Qucs Transcalc \- A transmission line calculator.
+QucsTranscalc \- A transmission line calculator.
 .SH SYNOPSIS
 .B qucstrans
 [\fIOPTION\fR] ...
@@ -16,7 +16,7 @@ The software aims to support all kinds of circuit simulation types,
 e.g. DC, AC, S-parameter, harmonic balance analysis, noise analysis,
 etc.
 
-\fBQucs Transcalc\fR is the transmission line tool used by Qucs.  The
+\fBQucsTranscalc\fR is the transmission line tool used by Qucs.  The
 application was somewhat inspired by \fBtranscalc\fR by Claudio
 Girardi and Gopal Narayanan.  It is based on transcalc's latest CVS
 version with some minor fixes incorporated.  The GUI has been ported
