@@ -1,3 +1,8 @@
+2005-04-09  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucstrans.cpp (slotCopyToClipBoard): Added schematic creation
+	for coupled microstrip.
+
 2005-04-04  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucstrans.cpp (slotCopyToClipBoard): Started to implement the
